--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -69,7 +69,6 @@
         height: 10px;
         margin-left: 10px;
         transition: none;
-
     }
     &::after {
         content: '';
@@ -87,5 +86,8 @@
     }
     &:hover {
         transform: translateY(-5px);
+    }
+    &:disabled {
+        filter: grayscale(.5);
     }
 }
